apps/prod/todogi-backend/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todogi-be
  labels:
    app.kubernetes.io/name: todogi-backend
    app.kubernetes.io/part-of: todogi
    talay.io/environment: prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: todogi-backend-tls
      hosts:
        - api.singlestranger.com
        - www.api.singlestranger.com
  rules:
    - host: api.singlestranger.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todogi-be
                port:
                  number: 80
    - host: www.api.singlestranger.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todogi-be
                port:
                  number: 80
